alpha-app/workloads/base/angular-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    organisation: riag
    product-cluster: tech
    product: alpha-team
    application: alpha-app
    container: angular-fe
  name: angular-fe
  namespace: riag-tech-alpha-team-alpha-app
spec:
  ports:
    - name: http-svc
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    container: angular-fe
  type: ClusterIP
